--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./",
+    "@netlify/angular-runtime/*": ["node_modules/@netlify/angular-runtime/*"],
+    
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
