--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.6",
+    "@netlify/angular-runtime": "^2.2.1",
     "bootstrap": "^5.3.3",
     "canvg": "^4.0.2",
     "express": "^4.18.2",
