--- a/angular.json
+++ b/angular.json
@@ -14,8 +14,12 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "allowedCommonJsDependencies": [
+              "core-js",
+              "jspdf",
               "canvg",
-              "jspdf"
+              "raf",
+              "rgbcolor",
+              "@babel/runtime"
             ],
             "outputPath": "dist/invoice",
             "index": "src/index.html",
